[metadata]
name = elasticsearch-curator-api
description = "API for tending your Elasticsearch indices"
long_description = file: README.rst
version = attr: curator_api.version.__version__
author = Elastic
author_email = info@elastic.co
url = https://github.com/elastic/curator
license = Apache License, Version 2.0
keywords = elasticsearch, time-series, indexed, index-expiry
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
install_requires = 
    elasticsearch>=6.1.0,<7.0.0
    six>=1.11.0

setup_requires =
    elasticsearch>=6.1.0,<7.0.0
    six>=1.11.0

packages = curator_api
include_package_data = True
tests_require =
    mock
    nose
    coverage
    nosexcover

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal=1
